--- a/Spotify.ipynb
+++ b/Spotify.ipynb
@@ -202,7 +202,7 @@
     }
    ],
    "source": [
-    "Music_df = pd.read_csv('Spotify_data.csv')\n",
+    "Music_df = pd.read_csv('assets/data/Spotify_data.csv')\n",
     "\n",
     "Music_df.head()"
    ]
@@ -220,7 +220,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "connection_string = \"postgres:postgres@localhost:5432/Spotify_project\"\n",
+    "connection_string = \"postgres:ducktails1@localhost:5432/Spotify_project\"\n",
     "engine = create_engine(f'postgresql://{connection_string}')"
    ]
   },
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +278,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
